Name:                pc-bytes
Version:             0.3.0
Synopsis:            Byte Array abstractions and utility
description:         simple ByteArray, ByteArrayL, and some parsers
Homepage:            https://github.com/alephcloud/hs-pc-bytes
License:             AllRightsReserved
License-file:        LICENSE
Author:              PivotCloud
Maintainer:          vhanquez@pivotmail.com
Copyright:           2013-2015 PivotCloud, Inc
Category:            Binary
Build-type:          Simple
cabal-version: >=1.10

source-repository head
    type: git
    location: git@github.com:alephcloud/hs-pc-bytes.git

Library
  exposed-modules:
      PC.Bytes.ByteArray
      PC.Bytes.ByteArrayL
      PC.Bytes.Codec
      PC.Bytes.Utils
      PC.Bytes.Random

  build-depends:
      integer-gmp,
      base >= 4.7 && < 5.0,
      base-unicode-symbols >= 0.2.2.4,
      safe >= 0.3.3,
      bytestring >= 0.10.0.2,
      byteable >= 0.1.1,
      deepseq >= 1.3,
      text,
      base64-bytestring >= 1.0.0.1,
      base16-bytestring >= 0.1.1.5,
      transformers >= 0.3.0.0,
      crypto-random >= 0.0.7

  default-language: Haskell2010

  ghc-options: -Wall -fwarn-tabs
